<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/nav_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/nav_name"
        android:textSize="20sp"
        android:textColor="@color/navText"/>

    <TextView
        android:id="@+id/nav_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_department"
        android:textColor="@color/navText"/>
    <TextView
        android:id="@+id/nav_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_direction"
        android:textColor="@color/navText"/>
    <TextView
        android:id="@+id/nav_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_degree"
        android:textColor="@color/navText"/>
    <TextView
        android:id="@+id/nav_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_type"
        android:textColor="@color/navText"/>
    <TextView
        android:id="@+id/nav_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_login"
        android:textColor="@color/navText"/>
    <TextView
        android:id="@+id/nav_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_email"
        android:textColor="@color/navText"/>

</LinearLayout>